# socket-sphere

./: .gitignore  CMakeLists.txt  LICENSE  README.md  configure.sh  run_client.sh  run_server.sh
include/client/: ChatClient.hpp  TCPClient.hpp
include/common/: Utils.hpp
include/server/: ChatServer.hpp  TCPServer.hpp
src/: client.cpp  server.cpp
